# sentinel

./: .gcloudignore  .gitignore  Cargo.toml  Dockerfile  PRODUCTION_DEPLOYMENT.md  README.md  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: cd.yaml  ci.yaml  publish-crates.yaml  publish-npm.yml
benchmarks/output/: summary.md
config/: sentinel.yaml
crates/sentinel-alerting/: Cargo.toml  README.md
crates/sentinel-alerting/src/: deduplication.rs  lib.rs  rabbitmq.rs  webhook.rs
crates/sentinel-api/: Cargo.toml  README.md
crates/sentinel-api/src/: execution.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs
crates/sentinel-api/src/handlers/: alerting.rs  anomaly.rs  correlation.rs  drift.rs  events.rs  metrics.rs  query.rs  rca.rs
crates/sentinel-benchmarks/: Cargo.toml
crates/sentinel-benchmarks/src/: adapters.rs  io.rs  lib.rs  markdown.rs  mod.rs  result.rs
crates/sentinel-core/: Cargo.toml  README.md
crates/sentinel-core/src/: events.rs  execution.rs  lib.rs
crates/sentinel-core/src/phase2/: budget.rs  cache.rs  mod.rs  ruvector.rs  signals.rs  startup.rs
crates/sentinel-detection/: Cargo.toml  README.md
crates/sentinel-detection/src/: baseline.rs  engine.rs  lib.rs  stats.rs
crates/sentinel-detection/src/agents/: DRIFT_AGENT_VERIFICATION.md  alerting.rs  anomaly_detection.rs  contract.rs  drift_agent.rs  drift_cli.rs  incident_correlation.rs  mod.rs  root_cause_analysis.rs
crates/sentinel-detection/src/detectors/: cusum.rs  drift.rs  iqr.rs  mad.rs  mod.rs  zscore.rs
crates/sentinel-ingestion/: Cargo.toml  README.md
crates/sentinel-ingestion/src/: kafka.rs  lib.rs  otlp.rs  pipeline.rs  validation.rs
crates/sentinel-ingestion/src/adapters/: analytics_hub.rs  config_manager.rs  mod.rs  observatory.rs  shield.rs
crates/sentinel-storage/: Cargo.toml  README.md
crates/sentinel-storage/src/: cache.rs  influxdb.rs  lib.rs  query.rs
deployments/cloudrun/: deploy.sh  env.dev.yaml  env.prod.yaml  env.staging.yaml  service.yaml  setup-iam.sh
docs/: PHASE_2B_INFRA_INTEGRATION.md
docs/agents/: ALERTING_AGENT.md
lib/: index.d.ts.map  index.js  index.js.map
lib/agents/: alert.d.ts  alert.d.ts.map  alert.js  alert.js.map  anomaly.d.ts  anomaly.d.ts.map  anomaly.js  anomaly.js.map  correlation.d.ts  correlation.d.ts.map  correlation.js  correlation.js.map  drift.d.ts  drift.d.ts.map  drift.js  drift.js.map  rca.d.ts  rca.d.ts.map  rca.js  rca.js.map
sdks/go/: .gitattributes  .gitignore  API.md  CHANGELOG.md  FILE_MANIFEST.md  LICENSE  Makefile  QUICKSTART.md  README.md  SDK_SUMMARY.md  go.mod  go.sum
sdks/go/examples/: README.md  basic.go  error_handling.go
sdks/go/sentinel/: builder.go  builder_test.go  client.go  config.go  config_test.go  errors.go  events.go  events_test.go  types.go  validation.go  validation_test.go
sdks/python/: .gitignore  API.md  CHANGELOG.md  LICENSE  MANIFEST.in  OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_sdk.sh
sdks/python/examples/: async_usage.py  basic_usage.py  builder_pattern.py  openai_integration.py
sdks/python/sentinel_sdk/: __init__.py  builders.py  client.py  config.py  events.py  exceptions.py  types.py
sdks/python/tests/: __init__.py  test_builders.py  test_events.py  test_types.py
sdks/typescript/: .eslintrc.json  .gitignore  CHANGELOG.md  GETTING_STARTED.md  LICENSE  QUICK_REFERENCE.md  README.md  SDK_SUMMARY.md  package.json  tsconfig.json
sdks/typescript/examples/: README.md  basic.ts  batch.ts  builder.ts  error-handling.ts
sdks/typescript/src/: builders.ts  client.ts  config.ts  enums.ts  errors.ts  index.ts  types.ts  validation.ts
sentinel/: Cargo.toml
sentinel/src/: main.rs
src/: index.ts
src/agents/: alert.ts  anomaly.ts  correlation.ts  drift.ts  rca.ts
