[package]
name = "llm-sentinel-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Canonical benchmark interface for LLM-Sentinel"
keywords = ["llm", "benchmarks", "anomaly-detection", "observability"]
categories = ["development-tools"]

[dependencies]
# Internal crates
llm-sentinel-core = { version = "0.1.0", path = "../sentinel-core" }
llm-sentinel-detection = { version = "0.1.0", path = "../sentinel-detection" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
